# sysinfo

./: CMakeLists.txt  LICENSE  README.md
src/: main.cxx
